feat: get ads [HOS-146]
