# src/middlewares/validators/get-ads-query.ts
@@ -1,0 +1,6 @@
+import { query } from 'express-validator';
+
+export const getAdsQueryValidator = [
+    query('sortOrder').optional().isIn(['ASC', 'DESC']),
+    query('sortByPlatform').optional().isUUID(),
+];
